[project]
name = "pi-mono-python"
version = "0.53.0"
description = "Python mirror of pi-mono TypeScript monorepo"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
]

[tool.uv.workspace]
members = ["packages/ai", "packages/agent", "packages/coding-agent", "packages/tui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = [
    "packages/ai/tests",
    "packages/agent/tests",
    "packages/coding-agent/tests",
    "packages/tui/tests",
]
